RESOLVED FIXED222771
[WinCairo] Builds with ENABLE_CONTEXT_MENUS=OFF fail
https://bugs.webkit.org/show_bug.cgi?id=222771
Summary [WinCairo] Builds with ENABLE_CONTEXT_MENUS=OFF fail
Stephan Szabo
Reported 2021-03-04 17:00:35 PST
While looking at a problem with a TestWebKit test that times out if ENABLE_CONTEXT_MENUS is off (on PlayStation), I noticed that there are a bunch of compilation errors trying to build WinCairo with the flag turned off which seems bad.
Attachments
Patch (6.43 KB, patch)
2021-03-08 10:13 PST, Stephan Szabo
ews-feeder: commit-queue-
Patch (6.43 KB, patch)
2021-03-08 10:28 PST, Stephan Szabo
no flags
Stephan Szabo
Comment 1 2021-03-08 10:13:33 PST
Stephan Szabo
Comment 2 2021-03-08 10:28:34 PST
EWS
Comment 3 2021-03-08 12:09:21 PST
Committed r274089: <https://commits.webkit.org/r274089> All reviewed patches have been landed. Closing bug and clearing flags on attachment 422582 [details].
Radar WebKit Bug Importer
Comment 4 2021-03-08 12:10:16 PST
Note You need to log in before you can comment on or make changes to this bug.