[WinCairo] Builds with ENABLE_CONTEXT_MENUS=OFF fail https://bugs.webkit.org/show_bug.cgi?id=222771

Reviewed by Don Olmstead.

Build fix for turning off context menus adding ifdefs as necessary.

Source/WebKit:

* UIProcess/win/PageClientImpl.h:
* UIProcess/win/WebView.cpp:

Source/WebKitLegacy/win:

* WebCoreSupport/WebContextMenuClient.cpp:
* WebCoreSupport/WebContextMenuClient.h:
* WebView.cpp:


Canonical link: https://commits.webkit.org/235024@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274089 268f45cc-cd09-0410-ab3c-d52691b4dbfc